refactor Clean up duplicated settings.